# claude_clone

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  RELEASE.md  build.rs
.github/workflows/: release.yml
locales/: en.yml  zh-CN.yml
scripts/: generate_icons.py  package-linux.sh  package-macos.sh  package-windows.ps1
src/: app_updater.rs  chat_view.rs  conversation_panel.rs  dialogs.rs  document_parser.rs  export.rs  genai_backend.rs  i18n.rs  main.rs  mcp_backend.rs  menus.rs  mock_backend.rs  models.rs  panel_data.rs  provider_settings.rs  search_dialog.rs  settings_window.rs  side_panel.rs  sidebar.rs  store.rs  system_file.rs  theme.rs  theme_settings.rs  titlebar.rs  voice_input.rs
tests/: side_panel_data.rs
