[package]
name = "claude_clone"
description = "High-fidelity Claude desktop UI clone built with GPUI and gpui-component."
version = "0.5.1"
publish = false
edition = "2024"
build = "build.rs"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1"
dirs = "6"
futures = "0.3"
genai = "=0.6.5"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
gpui-updater = { git = "https://github.com/AprilNEA/gpui-updater", rev = "f6688e9a96eeb7058d96b1ec4b3a7af13f4f4323" }
liteparse = { version = "2.1.1", default-features = false }
rmcp = { version = "0.15.0", features = ["client", "transport-child-process"] }
rust-i18n = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time"] }

[target.'cfg(windows)'.dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
document-ocr = []

[lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
useless_conversion = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
markdown = { opt-level = 3 }
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
smol = { opt-level = 3 }
sum_tree = { opt-level = 3 }
taffy = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
xml5ever = { opt-level = 3 }
